# drake

./: .gitignore  .gitmodules  CMakeLists.txt
attic/systems/sensors/: rgbd_camera.cc  rgbd_camera.h
bindings/pydrake/: autodiffutils_py.cc  geometry_py.cc
bindings/pydrake/manipulation/: BUILD.bazel  robot_plan_runner_py.cc
bindings/pydrake/multibody/: BUILD.bazel  collision_py.cc  joints_py.cc  rigid_body_tree_py.cc  tree_py.cc
bindings/pydrake/solvers/: ik_py.cc  mathematicalprogram_py.cc
bindings/pydrake/systems/: framework_py_systems.cc  meshcat_visualizer.py  primitives_py.cc  sensors_py.cc
bindings/pydrake/test/: pendulum_control_test.py
drake/: CMakeLists.txt
drake/bindings/: CMakeLists.txt
drake/doc/: drakeURDF.xsd
drake/examples/: CMakeLists.txt
drake/examples/Atlas/: findAtlasFixedPoint.m  perturbTest.m  runAtlasStepRecovery.m  testQPLCSSEOnAtlas.m  testSSEOnAtlas.m
drake/examples/GelsightPerception/: GSLegoEnd.m  GSLegoEndSpecial.m  GSSimpleBox.m  GSSimpleSphere.m  README.txt  collisionApproachGelSight.m  collisionGelSight.m  convertGStoHM.m  iamtrained.mat  justabox.urdf  makeGSRectangular.m  makeGSSquare.m  runGSBoxDemo.m  (+25 more)
drake/examples/IRB140/: CMakeLists.txt  HandState.m  IRB140.m  IRB140State.m  estimator.cpp  estimator.hpp  irb140_state_estimator.cpp  simulWithHand.m  simulWithHandObjectPickup.m
drake/examples/IRB140/urdf/: irb_140.urdf
drake/examples/Valkyrie/: CMakeLists.txt  run_left_hand_dynamics.cc
drake/examples/Valkyrie/urdf/urdf/: left_hand_test_bench.urdf
drake/lcmtypes/: CMakeLists.txt  lcmt_point_cloud.lcm  lcmt_whole_body_data.lcm
drake/multibody/: inverse_kinematics_backend.cc  parser_urdf.cc  rigid_body_tree.cc  rigid_body_tree.h  xml_util.cc  xml_util.h
drake/solvers/: BUILD  CMakeLists.txt  ContactImplicitFixedPointProgram.m  ContactImplicitFixedPointUnconstrainedProgram.m  ContactImplicitLogForceFixedPointProgram.m  FixedPointProgram.m  gurobi_solver.cc  gurobi_solver.h  mathematical_program.cc  mathematical_program.h  mathematical_program_solver_interface.h  mosek_solver.cc  mosek_solver.h  mosek_solver_enum_map_builder.h  rotation_constraint.cc  rotation_constraint.h  rotation_constraint_internal.h  solution_result.h
drake/solvers/test/: CMakeLists.txt  gurobi_test.cc  rotation_constraint_test.cc
drake/systems/: CMakeLists.txt  QPDART.m  QPLCContactImplicitEstimator.m  QPMIContactImplicitEstimator.m
drake/util/: CMakeLists.txt  drakeGeometryUtil.h
examples/Atlas/: Atlas.m  runAtlasBalancingWithHandFT.m  runAtlasStepRecovery.m  runAtlasWalking.m  runAtlasWalkingSplit.m
examples/CBSE/: BallSLAMThing.m  SLAMThing.m  SLAMThingSnoptFunction.m  StateEstQPBlock.m  box2Dsandbox.m  boxsandbox.m  fallingBrickFinalStateOnlySQP.m  fallingBrickIMUIter.m  fallingBrickQPIMU.m  fallingBrickWithIMUAndInitSQP.m  sandbox.m
examples/manipulation_station/: end_effector_teleop_mouse.py  end_effector_teleop_mouse_playback.py  manipulation_station.cc
examples/rocket/: PlanarRocketPlant.m  PlanarRocketVisualizer.m  Rocket.m  rocketSim.m
lcmtypes/: CMakeLists.txt  lcmt_external_force_torque.lcm
manipulation/robot_plan_runner/: robot_plans.h
math/: BUILD.bazel
solvers/: ContactImplicitFixedPointProgram.m
solvers/trajectoryOptimization/: ContactImplicitTrajectoryOptimization.m  DirectTrajectoryOptimization.m
systems/controllers/: CMakeLists.txt  QPCommon.cpp  QPController.m  controlUtil.cpp
systems/plants/: RigidBodyManipulator.cpp  RigidBodyManipulator.h  RigidBodySlopedTerrain.m  TimeSteppingInertialMeasurementUnit.m  TimeSteppingRigidBodyManipulator.m  collisionRaycastmex.cpp  setupLCPmex.cpp
systems/robotInterfaces/: CMakeLists.txt  QPLocomotionPlan.m  RecoveryPlanner.m
systems/sensors/: camera_info.cc  camera_info.h  rgbd_camera.cc  rgbd_camera.h  rgbd_renderer_vtk.cc
tools/: gurobi.bzl
util/: ExternalForceTorque.m  qpSpline.m
(+91 files in other folders)
